--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,44 @@
 page-home {
+    .titleicon {
+        position: absolute;
+        width: 100%;
+        left: 0;
+        bottom: 0;
+        text-align:center;
+        background-color:#F20A0A;
+    }
+    
+    .searchbar-input {
+        border-radius: 30px !important;
+        padding-left: 30px !important;
+        border: 1px solid #ffffff;
+        border-bottom: 0px !important;
+        box-shadow: none !important;
+    }
+    
+    .card-background-page {
 
+      ion-card {
+        position: relative;
+        text-align: center;
+      }
+
+      .card-title {
+        position: absolute;
+        top: 36%;
+        font-size: 2.0em;
+        width: 100%;
+        font-weight: bold;
+        color: #fff;
+      }
+
+      .card-subtitle {
+        font-size: 1.0em;
+        position: absolute;
+        top: 52%;
+        width: 100%;
+        color: #fff;
+      }
+
+    }
 }
