--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,6 +1,6 @@
 page-login {
     .login-content {
-        background-image: url('../../assets/imgs/background-sized.png');
+        background-image: url('../assets/imgs/background-sized.png');
         background-repeat: no-repeat;
         background-size:cover;
         .logo-row {
