- Upgrade ionic, cordova, & node - Add Logout to Merchant - Add order notification to merchant - Add merchant name on top order details

--- a/src/pages/order/order.scss
+++ b/src/pages/order/order.scss
@@ -42,4 +42,14 @@ page-order {
       }
 
     }
+    
+    .input-wrapper {
+        padding:10px;
+    }
+    li {
+        font-size:1.4rem;
+    }
+    ul {
+        padding-left: 17px;
+    }
 }
