--- a/src/pages/search/search.scss
+++ b/src/pages/search/search.scss
@@ -74,7 +74,7 @@ page-search {
     }
     }
     ion-thumbnail img {
-        background-image:url('../assets/imgs/default-thumb.jpg');
+        background-image:url('https://firebasestorage.googleapis.com/v0/b/telfood-81ef2.appspot.com/o/default-image-thumb.jpeg?alt=media&token=0027925a-acc7-4df7-a5bd-90711c2ed581');
         width:80px;
     }
 
